--- a/destination/templates/home.html
+++ b/destination/templates/home.html
@@ -7,7 +7,7 @@
 <div class="relative rounded-lg overflow-hidden shadow-lg m-4">
 
     {% load static %}
-    <img src="{% static 'antioquia.avif' %}" alt="main_photo" class="h-600">
+    <img src="{% static 'antioquia.avif' %}" alt="main_photo" class="h-600 w-full">
     
     <!-- Text container -->
     <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center bg-black/50">
