--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -20,7 +20,7 @@
             <div class="card-body">
                 <h2 class="card-title text-3xl font-bold">{{ municipality.name }}</h2>
 
-                <!-- Categorías -->
+                <!-- Categories --> 
                 <h2 class="font-semibold text-gray-700">Categorías:</h2>
                 <div class="flex flex-wrap gap-3 mt-2">
                     {% if municipality.categories.all %}
@@ -34,10 +34,10 @@
                     {% endif %}
                 </div>
 
-                <!-- Descripción -->
+                <!-- Description -->  
                 <p class="text-gray-700 mt-4">{{ municipality.description }}</p>
 
-                <!-- Botones -->
+               <!-- Buttons --> 
                 <div class="mt-6 flex space-x-4 justify-center">
                     <a href="{% url 'municipality_events' municipality.id %}" class="bg-blue-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-blue-700">Ver Eventos</a>
                     <a href="{% url 'municipality_name_list' %}" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-lg shadow-md hover:bg-gray-300">Volver a la Lista</a>
@@ -91,7 +91,7 @@
                                 <div class="card-body mt-4">
                                     <h3 class="text-xl font-semibold text-blue-700">{{ activity.name }}</h3>
                                     
-                                    <!-- Descripción oculta dentro de un <details> -->
+                                    <!-- Hidden description inside a <details> -->  
                                     <details class="mt-2">
                                         <summary class="text-blue-600 cursor-pointer font-medium">Más info</summary>
                                         <p class="mt-2 text-gray-600">{{ activity.description }}</p>
