--- a/destination/templates/maps4.html
+++ b/destination/templates/maps4.html
@@ -6,8 +6,8 @@
     <script>
         function initMap() {
             var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 7,
-                center: { lat: 4.6097, lng: -74.0817 }
+                zoom: 12,
+                center: { lat: 6.2442, lng: -75.5812 } //Medellín
             });
 
             var directionsService = new google.maps.DirectionsService();
