--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&libraries=places"></script>
+
 <title>{{ municipality.name }}</title>
 <div class="max-w-5xl mx-auto px-6 py-5">
     <!-- Hero Section -->
@@ -40,13 +42,49 @@
                <!-- Buttons --> 
                 <div class="mt-6 flex space-x-4 justify-center">
                     <a href="{% url 'municipality_events' municipality.id %}" class="bg-blue-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-blue-700">Ver Eventos</a>
+                    <button onclick="toggleMap()" class="bg-blue-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-blue-700">¿Cómo llegar?</button>
                     <a href="{% url 'municipality_name_list' %}" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-lg shadow-md hover:bg-gray-300">Volver a la Lista</a>
                 </div>
             </div>
         </div>
+
+        <div id="map-container" class="hidden">
+            <div class="flex flex-col items-center gap-4 p-4 bg-gray-100 rounded-lg shadow-md w-full mx-auto">
+                <input id="origin" type="text" placeholder="Ingresar Origen" 
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 shadow-sm">
+            
+                <input id="destination" type="text" placeholder="Ingresar destino" 
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 shadow-sm">
+            
+                <select id="mode" title="TravelMode" 
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 shadow-sm bg-white">
+                    <option value="DRIVING">Conduciendo</option>
+                    <option value="WALKING">Caminando</option>
+                    <option value="BICYCLING">Bicicleta</option>
+                    <option value="TRANSIT">Transporte público</option>
+                </select>
+            
+                <button id="route-btn" 
+                    class="w-full bg-green-600 text-white font-semibold px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition duration-300">
+                    Obtener ruta
+                </button>
+            </div>
+            
+            <div id="map" style="height: 500px; width: 100%;"></div>
+
+            <div class="flex justify-center p-2">
+                <a href="https://www.google.com/maps/dir/Medell%C3%ADn,+Medellin,+Antioquia/{{ municipality.name }}" 
+                   target="_blank" 
+                   rel="noopener" 
+                   class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700">
+                   Google Maps
+                </a>
+              </div>
+        </div>
         
         <!-- Restaurants Section -->
         <div class="card bg-yellow-100 shadow-lg rounded-lg mt-8 p-6">
+            
             <div class="card-body">
                 <h2 class="card-title text-3xl font-bold text-yellow-800">¿Dónde Comer en {{ municipality.name }}?</h2>
 
@@ -147,5 +185,63 @@
 
    
 </div>
+
+<script>
+    function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 12,
+            center: { lat: 6.2442, lng: -75.5812 } //Medellín
+        });
+
+        var directionsService = new google.maps.DirectionsService();
+        var directionsRenderer = new google.maps.DirectionsRenderer();
+        directionsRenderer.setMap(map);
+
+        // Autocomplete para origen y destino
+        var originInput = document.getElementById('origin');
+        var destinationInput = document.getElementById('destination');
+
+        var autocompleteOrigin = new google.maps.places.Autocomplete(originInput);
+        var autocompleteDestination = new google.maps.places.Autocomplete(destinationInput);
+
+        destinationInput.value = "{{ municipality.name }}, Antioquia, Colombia";
+
+        document.getElementById('route-btn').addEventListener('click', function() {
+            calculateAndDisplayRoute(directionsService, directionsRenderer);
+        });
+    }
+
+    function calculateAndDisplayRoute(directionsService, directionsRenderer) {
+        var origin = document.getElementById('origin').value;
+        var destination = document.getElementById('destination').value;
+        var mode = document.getElementById('mode').value;
+
+        directionsService.route({
+            origin: origin,
+            destination: destination,
+            travelMode: google.maps.TravelMode[mode.toUpperCase()]
+        }, function(response, status) {
+            if (status === 'OK') {
+                directionsRenderer.setDirections(response);
+            } else {
+                alert('Directions request failed due to ' + status);
+            }
+        });
+    }
+
+    let mapInitialized = false;
+
+    function toggleMap() {
+        var mapContainer = document.getElementById("map-container");
+
+        if (!mapInitialized) {
+            initMap();
+            mapInitialized = true;
+        }
+
+        mapContainer.classList.toggle("hidden");
+    }
+
+</script>
 
 {% endblock %}
