Adding comentaries to views.py, municipality_detail.html, municipality_events.html

--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -73,7 +73,7 @@
             </div>
         </div>
 
-
+        <!-- Map section -->
         <div id="map-container" class="hidden">
             <div class="flex flex-col items-center gap-4 p-4 bg-gray-100 rounded-lg shadow-md w-full mx-auto">
                 <input id="origin" type="text" placeholder="Ingresar Origen" 
@@ -212,7 +212,7 @@
 
    
 </div>
-
+<!-- Map script -->
 <script>
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
