--- a/destination/templates/home.html
+++ b/destination/templates/home.html
@@ -7,6 +7,7 @@
 <div class="relative rounded-lg overflow-hidden shadow-lg m-4">
 
     {% load static %}
+    <!-- Main image of landing -->
     <img src="{% static 'antioquia.avif' %}" alt="main_photo" class="h-600 w-full">
     
     <!-- Text container -->
@@ -18,11 +19,12 @@
     </div>
 </div>
 
+<!-- Recommendated destinations div -->
 <div class="text-center my-8">
     <h2 class="text-2xl font-bold underline">Destinos Recomendados</h2>
 </div>
 
-<!-- Images container -->
+<!-- Images and links container -->
 <div class="grid grid-cols-2 md:grid-cols-3 gap-4 px-4 mb-8">
     {% for municipality in municipalities %}
     <a href="{% url 'municipality_detail' municipality.id %}" class="block">
