Update - Header and Home styled

--- a/destination/templates/home.html
+++ b/destination/templates/home.html
@@ -8,20 +8,18 @@
 
     {% load static %}
     <!-- Main image of landing -->
-    <img src="{% static 'antioquia.avif' %}" alt="main_photo" class="h-600 w-full">
+    <img src="{% static 'landing_main_image.svg' %}" alt="main_photo" class="h-600 w-full">
     
     <!-- Text container -->
     <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center bg-black/50">
-        <h1 class="text-3xl font-bold">ANTIOQUIA OFF THE MAP</h1>
-        <p class="text-lg mt-2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam a voluptas perferendis ea est consectetur accusantium magnam.
-        </p>
+        <h1 class="font-title text-6xl font-bold">ANTIOQUIA</h1>
+        <h1 class="font-title text-6xl font-bold">OFF THE MAP</h1>
     </div>
 </div>
 
 <!-- Recommendated destinations div -->
 <div class="text-center my-8">
-    <h2 class="text-2xl font-bold underline">Destinos Recomendados</h2>
+    <h2 class="text-2xl font-bold underline text-customDarkGreen">Destinos Recomendados</h2>
 </div>
 
 <!-- Images and links container -->
