--- a/destination/templates/experience_search.html
+++ b/destination/templates/experience_search.html
@@ -40,7 +40,7 @@
         </div>
 
        
-        <div id="experience-results" class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div id="experience-results" class="mt-6">
             <p class="text-gray-600 text-center col-span-full">No hay resultados</p>
         </div>
     </div>
